Fix layout issues when choosing scheduled sessions (play button would disappear) and with measures in session (would appear out of boundaries)

--- a/www/css/paddler.css
+++ b/www/css/paddler.css
@@ -17,7 +17,7 @@ body {
 
 .paddler-topbar {
     background-color: #7E8C8D;
-    height: 17vh;
+    height: 18vh;
 }
 
 .paddler-title {
