--- a/www/css/select.session.css
+++ b/www/css/select.session.css
@@ -10,13 +10,6 @@
     width: 100%;
 }
 
-.select-session-play {
-    float: left;
-    width: 50%;
-    height: 100%;
-    background-color: #EF6156;
-}
-
 .select-session-available-sessions {
     width: 100%;
 }
