--- a/www/css/select.session.landscape.css
+++ b/www/css/select.session.landscape.css
@@ -13,11 +13,13 @@
 }
 
 .select-session-play > .label,  .select-session-play > .selected-session {
-    height: 15%;
+    height: 10vh;
+    min-height: 10vh;
+    line-height: 10vh;
+    width: 50vw;
     text-align: center;
-    font-size: 3vw;
+    font-size: 6vh;
     text-transform: uppercase;
-
     color: white;
     font-weight: bold;
 }
@@ -25,16 +27,24 @@
 .select-session-play > .select-session-free-session-toggle {
     display: table;
     font-size: 4vh;
-    width: 60%;
+    width: 50vw;
+    height: 10vh;
+    min-height: 10vh;
     position: absolute;
-    bottom: 20px;
+    bottom: 1vh;
+    line-height: 10vh;
 }
 
 .select-session-start {
     width: 100%;
-    height: 60%;
+    height: 62vh;
+    min-height: 62vh;
     color: #fff;
     background: url(../images/play-with-circle.svg) center center;
     background-size: 60%;
     background-repeat: no-repeat;
+}
+
+.select-session-available-sessions-wrapper, .select-session-play {
+    height: 82vh;
 }
